# isbd

./: .gitignore
lab1/: .clangd  .gitignore  README.md  compile_commands.json  crc64.c  crc64.h  flake.nix  gen_crc64table.c  main.c  makefile  md5.c  md5.h
mdb/: .clangd  .dockerignore  .gitignore  .ocamlformat  Dockerfile  README.md  docker-compose.yaml  dune-build-all.ctf  dune-project  flake.nix  format.md  gen_csv.sh  heaptrack.main.exe.326097.zst  heaptrack.main.exe.326865.zst  heaptrack.main.exe.333495.zst  heaptrack.main.exe.333919.zst  heaptrack.main.exe.334243.zst  heaptrack.main.exe.334614.zst  heaptrack.main.exe.336999.zst  heaptrack.main.exe.357877.zst  heaptrack.main.exe.358265.zst  heaptrack.main.exe.358652.zst  heaptrack.main.exe.359142.zst  heaptrack.main.exe.360000.zst  heaptrack.main.exe.360765.zst  heaptrack.main.exe.361515.zst  heaptrack.main.exe.361923.zst  heaptrack.main.exe.362888.zst  heaptrack.main.exe.363171.zst  heaptrack.main.exe.363837.zst  heaptrack.main.exe.364700.zst  heaptrack.main.exe.366576.zst  heaptrack.main.exe.367135.zst  heaptrack.main.exe.370542.zst  heaptrack.main.exe.371607.zst  heaptrack.main.exe.374134.zst  heaptrack.main.exe.375759.zst  heaptrack.main.exe.376261.zst  heaptrack.main.exe.377097.zst  import_person_q.json  (+11 more)
mdb/cli/: dune  main.ml
mdb/data/: my_table.csv  my_table_ext.csv  person.txt
mdb/lib/: bar.ml  big_array.c  chunk.ml  cmp.c  column.ml  const.ml  cursor.ml  data.ml  deserializer.ml  dune  serializer.ml  stateful_buffers.ml  test_func.ml
mdb/lib/Schema/: error.ml  sig.ml  sigArray.ml  type.ml
mdb/lib/Utils/: debugging.ml  mopt.ml  sequ.ml
mdb/lib/libUtils/: debugging.ml  mresult.ml  undefined.ml
mdb/opam/: mdb.opam
mdb/openapi/: _dune  openapi.ml
mdb/queries/num/: import.json  q_div.json  q_full_select.json  q_null_select.json  up.json
mdb/queries/person/: import.json  q_full_name.json  q_select.json  up.json
mdb/test/: api.ml  api_route_stubs.ml  dune  e2e.ml  json.ml  sorting.ml
mdb/test/api_tests/: common.ml  common.ts  system_info.ml  system_info.spec.ts  table.spec.ts
mdb/test/api_tests/queries/copy/: simple.csv  simple.spec.ts
mdb/utils/: dune  fpath.ml  let.ml  matrix.ml  monad.ml  ops.ml  unwrap.ml  validation.ml
mdb/web/: dune  main.ml  web.ml
mdb/web/core/: config.ml  queryTask.ml  taskQueue.ml  taskQueue.mli  uuid.ml  uuid.mli
mdb/web/metastore/: const.ml  metastore.ml  store.ml  tableData.ml
mdb/web/middleware/: appConfigMiddleware.ml  errorMiddleware.ml  metastoreMiddleware.ml  taskQueueMiddleware.ml  uptimeMiddleware.ml
mdb/web/models/: column.ml  columnExpression.ml  columnValue.ml  copyQuery.ml  error.ml  executeQueryRequest.ml  getQueryResultRequest.ml  int64Column.ml  limitExpression.ml  logicalColumnType.ml  multipleProblemsError.ml  orderByExpression.ml  query.ml  queryDefinition.ml  queryId.ml  queryResult.ml  queryStatus.ml  responseQueryResult.ml  selectQuery.ml  shallowQuery.ml  shallowTable.ml  systemInformation.ml  tableSchema.ml
mdb/web/planner/: config.ml  cse.ml  eval.ml  preprocess.ml  validate.ml
mdb/web/routes/: error_.ml  result_.ml  routes.ml  system_.ml
mdb/web/routes/queries/: queries.ml  queries_get.ml
mdb/web/routes/queries/query/: get.ml  post.ml
mdb/web/routes/query/: query.ml
mdb/web/routes/tables/: tables.ml  tables_get.ml
mdb/web/routes/tables/table/: delete.ml  get.ml  put.ml
mdb/web/utils/: yj.ml
mdb/web/webUtils/: file.ml  placeholder.ml  yj.ml
mdb/web/worker/: csvParser.ml  logger.ml  main.ml
