(lang dune 3.8)

(using ctypes 0.3)

(name mdb)

(license MIT-0)

; https://dune.readthedocs.io/en/stable/opam.html#generating-opam-files

(generate_opam_files)

; (opam_file_location inside_opam_directory)

(cram enable)

; https://dune.readthedocs.io/en/stable/concepts.html#package-specification

(package
 (name mdb)
 (synopsis "Friendly greetings")
 (depends
  (alcotest
   (>= 1.9.1))
  (dream
   (>= 0.5.0))
  (yojson
   (>= 2.2.2))
  (ppx_yojson_conv
   (>= 0.17.1))
  (lwt_ppx
   (>= 5.9.2))
  (lz4
   (>= 1.3.0))
  (csv
   (>= 2.4.0))
  (containers
   (>= 3.15))
  (uuidm
   (>= 0.9.10))))
