; More information on specifying libraries can be found in the Dune documentation:
;
; - https://dune.readthedocs.io/en/stable/concepts.html#libraries
; - https://dune.readthedocs.io/en/stable/dune-files.html#library

(include_subdirs qualified)

(library
 (name lib)
 (libraries unix lz4)
 (foreign_stubs
  (language c)
  (names big_array cmp)
  (flags
   (:standard -Ofast))))

(env
 (release ;; <- notice the change here
  (flags
   (:standard -w -50-32-27-9-69-34-37-33))
  (ocamlopt_flags
   (:standard -unsafe -noassert -inline 100))))

;
; (library
;  (name ppx_deriving_json_schema)
;  (public_name ppx_deriving_json_schema)
;  (kind ppx_deriver)
;  (modules ppx_deriving_json_schema)
;  (libraries ppx_deriving ppxlib core yojson ppx_yojson_conv_lib)
;  (preprocess
;   (pps ppxlib.metaquot ppx_deriving.make)))
;
; (documentation
;  (package hello))
