; For more information on writing and running tests, see the Dune documentation:
;
; - https://dune.readthedocs.io/en/stable/tests.html
; - https://dune.readthedocs.io/en/stable/dune-files.html#tests-stanza

(test
 (name e2e)
 (libraries alcotest lib))

; (test
;  (name api_route_stubs)
;  (libraries alcotest dream web))

(test
 (name json)
 (libraries alcotest dream web yojson)
 (preprocess
  (pps lwt_ppx ppx_yojson_conv)))

; More information on Cram tests can be found in the Dune documentation:
;
; - https://dune.readthedocs.io/en/stable/tests.html#cram-tests

; (cram
;  (package mdb)
;  (deps %{bin:hello}))
